tools/rust-parser/tests/fixtures/positive/datalog-edge-cases.tree
\datalog{
  ? -: {\rel/is-node ?}
}
\datalog{
  ?result -: {\rel/has-tag ?result '{tag}} {\rel/is-node ?result} # {\rel/hidden ?result} {\rel/deleted ?result}
}
