tools/rust-parser/tests/fixtures/negative/malformed-datalog.tree
\datalog{?X - {\rel/is-node ?X}}
